--- a/GoShop/src/index.css
+++ b/GoShop/src/index.css
@@ -1,6 +1,12 @@
 @import "tailwindcss";
 
-
 * {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+}
+html,
+body,
+#root {
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
